# rust-simple-client

./: Cargo.toml  README.md
src/: main.rs
